--- a/launch/common.yaml
+++ b/launch/common.yaml
@@ -1,13 +1,14 @@
 #config/common.yaml
 
 ---
-service_Safety:
-    nodeName : "safetyserver_node" #Unused
-    serviceName : "safety_0" #Automatically generate <serviceName>_Reg and <serviceName>_Req service name
+launch_node : "server" # Server: server; Test: pub
 
+# Settings for Params class under vehicle_interfaces/params.h
+# The nodeName describes the name of node, the name will be automatically formed as "<nodeName>_<id>_node"
 generic_prop:
-    nodeName : "safetyserver_0_node" #primary
     namespace : "V0"
+    nodeName : "safetyserver"
+    id : 0 # Frequently changed parameter
     qosService : "qos_0"
     safetyService : "safety_0"
     timesyncService : "timesync_0"
