--- a/launch/common.yaml
+++ b/launch/common.yaml
@@ -1,6 +1,6 @@
 #ver=2.0
 ---
-launch_node : "server" # Server: server; Test: t
+launch_node : "server" # Server: server
 
 # Settings for Params class under vehicle_interfaces/params.h
 generic_prop:
